Code cleaning and improvements.